<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:src="@android:drawable/ic_dialog_map" />

            <EditText
                android:id="@+id/edFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ivProfilePic"
                android:hint="@string/first_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/edLasttName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edFirstName"
                android:layout_toRightOf="@id/ivProfilePic"
                android:hint="@string/last_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/edWeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/ivProfilePic"
                android:layout_marginTop="15dp"
                android:hint="@string/weight"
                android:inputType="number" />

            <EditText
                android:id="@+id/edHeight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/ivProfilePic"
                android:layout_marginLeft="84dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/edWeight"
                android:hint="@string/height"
                android:inputType="number" />

            <EditText
                android:id="@+id/edAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/edWeight"
                android:layout_marginTop="15dp"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/edAddress"
                android:layout_centerHorizontal="true"
                android:text="@string/accept" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>